--- a/_config.yml
+++ b/_config.yml
@@ -605,7 +605,7 @@ comments:
   style: tabs
   # Choose a comment system to be displayed by default.
   # Available values: changyan | disqus | disqusjs | facebook_comments_plugin | gitalk | livere | valine | vkontakte
-  active:
+  active: true
   # Setting `true` means remembering the comment system selected by the visitor.
   storage: true
   # Modify icons and texts for any style, here are some examples.
@@ -667,12 +667,12 @@ livere_uid: # <your_uid>
 # Demo: https://gitalk.github.io
 # For more information: https://github.com/gitalk/gitalk
 gitalk:
-  enable: false
-  github_id: # GitHub repo owner
-  repo: # Repository name to store issues
-  client_id: # GitHub Application Client ID
-  client_secret: # GitHub Application Client Secret
-  admin_user: # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
+  enable: true
+  github_id: zhouhongfa # GitHub repo owner
+  repo: hexo-comment-repo # Repository name to store issues
+  client_id: 4e2882f57520b8685852 # GitHub Application Client ID
+  client_secret: 87d0a55c793a1998fc691f20d55c56e273873c25 # GitHub Application Client Secret
+  admin_user: zhouhongfa # GitHub repo owner and collaborators, only these guys can initialize gitHub issues
   distraction_free_mode: true # Facebook-like distraction free mode
   # Gitalk's display language depends on user's browser or system environment
   # If you want everyone visiting your site to see a uniform language, you can set a force language value
