--- a/_config.yml
+++ b/_config.yml
@@ -197,7 +197,7 @@ site_state: true
 # Value after `||` delimiter is the name of Font Awesome icon. If icon (with or without delimiter) is not specified, globe icon will be loaded.
 social:
   GitHub: https://github.com/zhouhongfa || github
-  E-Mail: zhouhongfa1996@gmail.com || envelope
+  E-Mail: mailto:zhouhongfa1996@gmail.com || envelope
   #Weibo: https://weibo.com/yourname || weibo
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
