--- a/_config.yml
+++ b/_config.yml
@@ -667,7 +667,7 @@ livere_uid: # <your_uid>
 # Demo: https://gitalk.github.io
 # For more information: https://github.com/gitalk/gitalk
 gitalk:
-  enable: true
+  enable: false
   github_id: zhouhongfa # GitHub repo owner
   repo: hexo-comment-repo # Repository name to store issues
   client_id: 4e2882f57520b8685852 # GitHub Application Client ID
